<resources>
    <string name="app_name">Myfutsal</string>
    <string name="login">login</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">cf_b</string>
    <string name="signed">ss</string>
    <string name="already_have_an_account_login">ahan</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">SPLASH</string>
    <string name="home">Home</string>
    <string name="book">Book</string>
    <string name="profile">Profile</string>
    <string name="image_ground">Image Ground</string>
    <string name="logo">Logo</string>
    <string name="lapangan_futsal">Lapangan Futsal</string>
    <string name="hint_email">Masukkan Email Anda</string>
    <string name="hint_password">Masukkan Password Anda</string>
    <string name="around">Tempat Sekitar</string>
    <string name="gallery">Galeri Kami</string>
    <string name="empty_book">Empty Book</string>
    <string name="book_now">Book Now</string>
    <string name="subtext_empty_book">Anda belum booking Silahkan untuk booking terlebih dahulu</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar">Daftar Disini</string>
    <string name="name">Nama</string>
    <string name="hint_name">Masukkan Nama Anda</string>
    <string name="cpassword">Confirm Password</string>
    <string name="no_whatsapp">No. Whatsapp</string>
    <string name="hint_no_whatsapp">Msukkan No. Whatsapp Anda</string>
    <string name="register">Daftar</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="masuk">Masuk disini</string>
    <string name="register_success">Anda Berhasil Daftar</string>
    <string name="hint_err_password">Password Tidak Sesuai</string>

    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="username">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting">Setting</string>
    <string name="help_center">Help Center</string>
    <string name="services">Term Of Service</string>
    <string name="privacy"><![CDATA[Privacy & Policy]]></string>
    <string name="rating">Rate APP</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="isi_tanggal_sewa">Isi Tanggal sewa</string>
    <string name="pilih_jam">Pilih Jam</string>
    <string name="pilih_jam_sewa">Pilih Jam Sewa</string>
    <string name="pilih_lapangan">Pilih Lapangan</string>
    <string name="pilih_lapangan_yang_akan_digunakan">Pilih lapangan yang akan digunakan</string>
    <string name="booking">Booking</string>
    <string name="selected_item">Selected Item</string>
    <string name="err_msg_enter_date">Input tanggal masih kosong</string>
    <string name="booking_success_message">Booking Telah Berhasil</string>
    <string name="lapangan">Lapangan</string>
    <string name="jam_booking">jam booking</string>
    <string name="date">tanggal</string>
    <string name="riwayat_booking">Riwayat Booking</string>
    <string name="request_booking">Request Booking</string>
    <string name="msg_item_removed_successfully">Anda telah membatalkan sewa lapangan</string>

    <string-array name="rental_hours">
        <item>08:00 – 09:00</item>
        <item>09:00 – 10:00</item>
        <item>10:00 – 11:00</item>
        <item>11:00 – 12:00</item>
        <item>12:00 – 13:00</item>
        <item>13:00 – 14:00</item>
    </string-array>

</resources>