<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="24dp"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:orientation="vertical"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/black"
            app:subtitleTextColor="@color/greyColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:subtitle="Silakan login untuk melanjutkan"
            app:title="Welcome To My Futsal " />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextView.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/hint_name"
            android:background="@drawable/bg_input"
            android:inputType="text"
            style="@style/TextView.input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/TextView.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_name" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/hint_email"
            android:background="@drawable/bg_input"
            android:inputType="textEmailAddress"
            style="@style/TextView.input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_no_whatsapp"
            style="@style/TextView.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/no_whatsapp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <EditText
            android:id="@+id/edt_no_whatsapp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="phone"
            android:ems="10"
            android:hint="@string/hint_no_whatsapp"
            android:background="@drawable/bg_input"
            android:inputType="number"
            style="@style/TextView.input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_no_whatsapp"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/TextView.label"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_no_whatsapp" />

        <EditText
            android:id="@+id/edt_password"
            style="@style/TextView.input"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_input"
            android:ems="10"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_cpassword"
            style="@style/TextView.label"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/cpassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <EditText
            android:id="@+id/edt_cpassword"
            style="@style/TextView.input"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_input"
            android:ems="10"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cpassword"
            tools:ignore="LabelFor,RtlSymmetry" />

        <Button
            android:id="@+id/btn_register"
            style="@style/TextView.button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_button"
            android:text="@string/register"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_cpassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/sudah_punya_akun"
                style="@style/TextView.input"/>
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk"
                style="@style/TextView.input"
                android:textColor="@color/primaryColor"/>
        </LinearLayout>

        ]


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
