<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.book.booking.BookingActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:paddingBottom="24dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="24dp"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:orientation="vertical"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/black"
            app:subtitleTextColor="@color/greyColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:subtitle="Silakan input data untuk booking lapangan"
            app:title="Booking Lapngan " />

        <TextView
            android:id="@+id/tv_date"
            style="@style/TextView.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pilih_tanggal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/edt_date"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/isi_tanggal_sewa"
            android:background="@drawable/bg_input"
            android:inputType="date"
            style="@style/TextView.input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_time"
            style="@style/TextView.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pilih_jam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_date" />

        <Spinner
            android:id="@+id/edt_time"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/pilih_jam_sewa"
            android:background="@drawable/bg_input"
            style="@style/TextView.input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_ground"
            style="@style/TextView.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pilih_lapangan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_time" />

        <Spinner
            android:id="@+id/edt_ground"
            style="@style/TextView.input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="name"
            android:background="@drawable/bg_input"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ground"
            tools:ignore="LabelFor,RtlSymmetry" />

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="37dp"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_ground" />

        <Button
            android:id="@+id/btn_book"
            style="@style/TextView.button"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_button"
            android:text="@string/booking"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_user"
            app:layout_constraintTop_toBottomOf="@+id/edt_ground" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>